<resources>
    <string name="app_name">Capstone</string>
    <string name="splash">Pet Protector</string>
    <string name="password">Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="user_name">Username</string>
    <string name="add_pet_text">Add a Pet</string>
    <string name="login_button">Log in</string>
    <string name="sign_up_button">Sign up</string>
    <string name="edit_pet_info">Edit Pet Info</string>
    <string name="pet_name">Name of pet</string>
    <string name="pet_type">Type of pet</string>
    <string name="pet_desc">Description of pet</string>
    <string name="enter_name">Enter name here…</string>
    <string name="type_of_pet">Type of the Pet (optional)</string>
    <string name="enter_type">Enter type here…</string>
    <string name="enter_desc">Enter description here…</string>
    <string name="select_image">Select an image…</string>
    <string name="has_been_adopted">Is this pet adopted? (Check for "Yes")</string>
    <string name="pet_status">Status:</string>
    <string name="pet_find">Find Pet</string>
    <string name="user_info">User information</string>
    <string name="map_menu">Location Finder</string>
    <string name="pet_adoption">Pet Adoption</string>
    <string name="next">Next</string>
    <string name="name_placeholder">&lt;name not found&gt;</string>
    <string name="desc_placeholder">&lt;description not found&gt;</string>
    <string name="status_placeholder">&lt;status not found&gt;</string>
    <string name="status_actual">Status:</string>
    <string name="status_adoptable">Up for adoption</string>
    <string name="status_adopted">Adopted</string>
    <string name="status_lost">Lost</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="register_here">Register Here!</string>
    <string name="send_a_message">Send a text message response to this…</string>

    <string-array name="pet_types_array">
        <item>Dog</item>
        <item>Cat</item>
        <item>Small Mammal</item>
        <item>Fish</item>
        <item>Bird</item>
        <item>Reptile</item>
    </string-array>

    // sms
    <string name="add_contacts_button_text">Add Contacts…</string>
    <string name="send_text_message_button_text">Send Text Message</string>
    <string name="text_message_hint">Enter text message here…</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email Address</string>
    <string name="edit_title">Edit User Info</string>
    <string name="update_info">Update</string>
    <string name="title_activity_add_pet">AddPetActivity</string>

</resources>
