<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_pet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.mmizukami.capstone.AddPetActivity">

    <TextView
        android:text="@string/add_pet_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addPetTextView"
        android:textSize="30sp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal" />

    <TextView
        android:text="@string/pet_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/petNameEntryTextView"
        android:layout_weight="0.05" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/enter_name"
        android:ems="10"
        android:id="@+id/petNameEntryEditText" />

    <TextView
        android:text="@string/pet_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/petTypeTextView"
        android:layout_weight="0.06" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/enter_type"
        android:ems="10"
        android:id="@+id/petTypeEditText" />

    <TextView
        android:text="@string/pet_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/petDescriptionTextView"
        android:layout_weight="0.05" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/enter_desc"
        android:ems="10"
        android:id="@+id/petDescriptionEditText"
        android:layout_weight="0.48"
        android:gravity="top|center_vertical" />

    <Button
        android:text="@string/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addPetNextButton" />

</LinearLayout>