<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:text="@string/add_pet_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addButton" />

    <Button
        android:text= "@string/pet_find"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/findButton" />

    <Button
        android:text= "@string/map_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mapButton" />

    <Button
        android:text="@string/user_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userButton" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/menu_background"
        android:id="@+id/imageView4" />

</LinearLayout>