<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mmizukami.capstone.MainActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:text="@string/splash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView11"
        android:gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="196dp"
        app:srcCompat="@drawable/dog"
        android:id="@+id/imageView" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.38">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logInButton"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/login_button" />

        <Button
            android:text="@string/sign_up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signUpButton"
            android:layout_weight="1"
            android:onClick="onClick" />
    </LinearLayout>
</LinearLayout>
